v.0.0.3 Add animation on links, icons, images, styles.

--- a/src/common/styles/scss/variable.scss
+++ b/src/common/styles/scss/variable.scss
@@ -1,6 +1,5 @@
 $textColor: #fff;
-$secondaryTextColor: #c1c1c1;
-$primaryColor: cornflowerblue;
-//$bgColor: #222;
+$iconAndSecondaryTextColor: #c1c1c1;
 $bgColor: rgba(22, 22, 22, 0.9);
-//$bgBlockColor: #444;
+$gradientColor: linear-gradient(to left, #12c2e9, #c471ed, #f64f59);
+
