--- a/src/common/components/project/Project.module.scss
+++ b/src/common/components/project/Project.module.scss
@@ -1,27 +1,41 @@
 .project_wrapper {
-  width: 250px;
+  width: 400px;
+  background: rgba(255, 255, 255, 0.04);
+  backdrop-filter: saturate(180%) blur(30px);
+  border-radius: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  @media screen and (max-width: 1100px){
+    width: 300px;
+  }
+  @media screen and (max-width: 600px){
+    width: 290px;
+  }
 
-  .project_img_container {
-    width: 250px;
-    height: 250px;
+  .project_img {
+    width: 100%;
+    height: 60%;
     background-color: gray;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    .project_link {
-      text-decoration: none;
-      color: inherit;
-      padding: 5px 10px;
-      background-color: #dcd6f8;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    @media screen and (max-width: 1100px){
+      height: 50%;
     }
   }
 
   .project_title {
+    font-weight: 600;
+    line-height: 1.2;
+    font-size: 1.2em;
+    margin: 5px 0 15px;
     text-align: center;
   }
 
   .project_description {
+    margin: 0 0 15px;
+    padding: 10px;
   }
 }
 
