--- a/src/common/components/skill/Skill.module.scss
+++ b/src/common/components/skill/Skill.module.scss
@@ -2,24 +2,24 @@
 
 .skill_wrapper {
   flex: 0 1 30%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 10px;
   border: 1px solid rgba(255, 255, 255, 0.1);
   background: rgba(255, 255, 255, 0.04);
-  backdrop-filter: saturate(180%) blur(20px);
+  backdrop-filter: saturate(180%) blur(30px);
   border-radius: 15px;
   padding: 35px 25px;
-
   @media screen and (max-width: 1000px){
     flex: 0 1 45%;
+    margin: 10px 0;
   }
 
   .skill_icon {
     width: 60px;
     height: 60px;
-    background-color: #dde8ff;
   }
 
   .skill_title {
