--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -1,4 +1,5 @@
 @import "src/common/styles/scss/variable";
+@import "src/common/styles/scss/mixins";
 
 .nav {
     width: 400px;
@@ -12,7 +13,7 @@
         font-size: 1.2em;
         font-weight: 300;
         color: $textColor;
-        text-decoration: none;
+        @include linkBottomLine;
         @media screen and (max-width: 820px){
             font-size: 1em;
         }
