--- a/src/components/skills/Skills.module.scss
+++ b/src/components/skills/Skills.module.scss
@@ -11,7 +11,7 @@
     .skills_box {
       width: 100%;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
       flex-wrap: wrap;
       @media screen and (max-width: 642px) {
         flex-direction: column;
