--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,4 +1,5 @@
 @import "src/common/styles/scss/variable";
+@import "src/common/styles/scss/mixins";
 
 .footer_wrapper {
     border-top: 1px solid rgba(255, 255, 255, 0.1);
@@ -8,6 +9,7 @@
     z-index: 1;
 
     .footer_container {
+        @include container();
         display: flex;
         flex-direction: column;
         align-items: center;
