--- a/src/components/projects/Projects.module.scss
+++ b/src/components/projects/Projects.module.scss
@@ -1,10 +1,12 @@
 @import "src/common/styles/scss/variable";
+@import "src/common/styles/scss/mixins";
 
 .projects_wrapper {
   background-color: $bgColor;
   padding: 100px 0;
 
   .projects_container {
+    @include container();
     display: flex;
     flex-direction: column;
   }
