--- a/src/components/skills/Skills.module.scss
+++ b/src/components/skills/Skills.module.scss
@@ -1,10 +1,12 @@
 @import "src/common/styles/scss/variable.scss";
+@import "src/common/styles/scss/mixins.scss";
 
 .skills_wrapper {
   padding: 20px 0;
   background-color: $bgColor;
 
   .skills_container {
+    @include container();
     display: flex;
     flex-direction: column;
 
