--- a/src/common/components/project/Project.module.scss
+++ b/src/common/components/project/Project.module.scss
@@ -1,7 +1,9 @@
 .project_wrapper {
   width: 400px;
+  margin-top: 10px;
   background: rgba(255, 255, 255, 0.04);
   backdrop-filter: saturate(180%) blur(30px);
+  -webkit-backdrop-filter: saturate(180%) blur(30px);
   border-radius: 15px;
   border: 1px solid rgba(255, 255, 255, 0.1);
   @media screen and (max-width: 1100px){
