--- a/src/common/components/skill/Skill.module.scss
+++ b/src/common/components/skill/Skill.module.scss
@@ -10,6 +10,7 @@
   border: 1px solid rgba(255, 255, 255, 0.1);
   background: rgba(255, 255, 255, 0.04);
   backdrop-filter: saturate(180%) blur(30px);
+  -webkit-backdrop-filter: saturate(180%) blur(30px);
   border-radius: 15px;
   padding: 35px 25px;
   @media screen and (max-width: 1000px){
