--- a/src/components/contacts/Contacts.module.scss
+++ b/src/components/contacts/Contacts.module.scss
@@ -3,9 +3,10 @@
 .contacts_wrapper {
   //background-color: $bgColor;
   background-color: rgba(22, 22, 22, 0.9);
-  padding: 100px 0;
+  padding: 60px 0;
 
   .contacts_container {
+    padding-top: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,9 +21,11 @@
     }
 
     .contacts_form {
+      margin-top: 20px;
       border: 1px solid rgba(255, 255, 255, 0.1);
       background: rgba(255, 255, 255, 0.04);
       backdrop-filter: saturate(180%) blur(20px);
+      -webkit-backdrop-filter: saturate(180%) blur(30px);
       border-radius: 15px;
       padding: 35px;
       display: flex;
