--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -25,8 +25,10 @@
       width: 300px;
       text-align: center;
       padding: 10px 0;
+      z-index: 0;
       @media screen and (max-width: 1000px) {
         margin-bottom: 1em;
+        width: 300px;
       }
       @media screen and (max-width: 770px) {
         font-size: 1.2em;
