--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -8,16 +8,20 @@
     @media screen and (max-width: 820px){
         width: 300px;
     }
-
     & a {
         font-size: 1.2em;
         font-weight: 300;
         color: $textColor;
+        cursor: pointer;
         @include linkBottomLine;
         @media screen and (max-width: 820px){
             font-size: 1em;
         }
     }
+    .activeLink {
+        color: $iconAndSecondaryTextColor;
+    }
+
 }
 
 
