--- a/src/common/components/skill/Skill.module.scss
+++ b/src/common/components/skill/Skill.module.scss
@@ -34,5 +34,13 @@
     font-weight: 300;
     color: $textColor;
   }
+
+  .skill_technology {
+    display: flex;
+    margin-top: 10px;
+    width: 80%;
+    flex-direction: column;
+    align-items: start;
+  }
 }
 
