--- a/src/components/contacts/Contacts.module.scss
+++ b/src/components/contacts/Contacts.module.scss
@@ -70,6 +70,7 @@
         color: $textColor;
         padding: 1em;
         position: relative;
+        cursor: pointer;
 
         &::after {
           content: 'ss';
