--- a/src/common/components/link/Link.module.scss
+++ b/src/common/components/link/Link.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   font-size: 1.2em;
   padding: 10px;
+  margin-bottom: 10px;
 
   .link_element {
     text-decoration: none;
