--- a/src/common/components/project/Project.module.scss
+++ b/src/common/components/project/Project.module.scss
@@ -6,11 +6,31 @@
   -webkit-backdrop-filter: saturate(180%) blur(30px);
   border-radius: 15px;
   border: 1px solid rgba(255, 255, 255, 0.1);
-  @media screen and (max-width: 1100px){
+  &:hover .project_img_filter:after {
+    background-color: rgba(0, 0, 0, 0);
+  }
+
+  @media screen and (max-width: 1100px) {
     width: 300px;
   }
-  @media screen and (max-width: 600px){
+  @media screen and (max-width: 600px) {
     width: 290px;
+  }
+
+  .project_img_filter {
+    position: relative;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.2);
+    }
   }
 
   .project_img {
@@ -22,7 +42,19 @@
     align-items: center;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
-    @media screen and (max-width: 1100px){
+    position: relative;
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(255, 255, 255, 0.5);
+    }
+
+    @media screen and (max-width: 1100px) {
       height: 50%;
     }
   }
