--- a/src/assets/styles/variabels.scss
+++ b/src/assets/styles/variabels.scss
@@ -1,4 +1,5 @@
 $textColor: #eee;
 $darkColor: #444444;
 $colorPrimary: #6667AB;
+$gradientColor: linear-gradient(to left, rgb(102, 103, 171), rgb(128, 61, 92), rgb(136, 31, 42));
 $gradientBGColor: linear-gradient(to left, rgb(33, 33, 54), rgb(40, 22, 32), rgb(40, 14, 17));
