--- a/src/features/s2-main/Main.module.scss
+++ b/src/features/s2-main/Main.module.scss
@@ -56,7 +56,8 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: rgba(0, 0, 0, 0.2);
+      background-image: $gradientBGColor;
+      opacity: 0.2;
       border-radius: 15px;
     }
 
