--- a/src/features/s3-experience/Experience.module.scss
+++ b/src/features/s3-experience/Experience.module.scss
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: aquamarine;
-  height: 40vh;
+  min-height: 40vh;
   width: 100%;
 
   .experience__content {
@@ -12,9 +11,7 @@
     width: 90%;
 
     .experience__content_item {
-      background-color: #439a7c;
       width: 100%;
-      height: 80px;
     }
   }
 }
