--- a/src/features/s5-projects/Projects.module.scss
+++ b/src/features/s5-projects/Projects.module.scss
@@ -2,42 +2,48 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: darkseagreen;
   min-height: 50vh;
 
-  .projects__content {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  //.projects__content {
+  //  display: flex;
+  //  flex-direction: row;
+  //  flex-wrap: wrap;
+  //  justify-content: space-around;
+  //  width: 100%;
+  //
+  //  .projects__content_item {
+  //    height: 200px;
+  //    background-color: #53a253;
+  //    width: 30%;
+  //  }
+  //}
+
+  .projects__slider {
     width: 100%;
-
-    .projects__content_item {
-      height: 200px;
-      background-color: #53a253;
-      width: 30%;
-    }
+    display: flex;
+    justify-content: space-between;
   }
 
-  @media screen and (max-width: 1240px) {
-    .projects__content {
-      .projects__content_item {
-        margin-top: 20px;
-        width: 40%;
-      }
-    }
-  }
-
-  @media screen and (max-width: 800px) {
-    .projects__content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      .projects__content_item {
-        width: 90%;
-        margin-top: 20px;
-      }
-    }
-  }
+  //@media screen and (max-width: 1240px) {
+  //  .projects__content {
+  //    .projects__content_item {
+  //      margin-top: 20px;
+  //      width: 40%;
+  //      height: 100%;
+  //    }
+  //  }
+  //}
+  //
+  //@media screen and (max-width: 800px) {
+  //  .projects__content {
+  //    display: flex;
+  //    flex-direction: column;
+  //    align-items: center;
+  //
+  //    .projects__content_item {
+  //      width: 90%;
+  //      margin-top: 20px;
+  //    }
+  //  }
+  //}
 }
