--- a/src/components/ui/Link/Link.module.scss
+++ b/src/components/ui/Link/Link.module.scss
@@ -1,5 +1,5 @@
-@import "src/assets/styles/variabels";
-@import "src/assets/styles/mixins";
+@import "../../../assets/styles/variabels";
+@import "../../../assets/styles/mixins";
 
 .link_wrapper {
   display: flex;
