fix arrows in projects slider

--- a/src/components/TransparentButton/TransparentButton.module.scss
+++ b/src/components/TransparentButton/TransparentButton.module.scss
@@ -8,6 +8,26 @@
 
   font-size: 1rem;
   padding: 4px 8px;
+
+  svg {
+    width: 64px;
+    height: 64px;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 50%;
+  }
+
+  &.backButton {
+    svg {
+      padding-right: 8px;
+    }
+  }
+
+  &.forwardButton {
+    svg {
+      padding-left: 8px;
+    }
+  }
+
   &:hover {
     color: $colorPrimary;
   }
