--- a/src/features/s5-projects/Projects.module.scss
+++ b/src/features/s5-projects/Projects.module.scss
@@ -6,7 +6,8 @@
 
   .projects__slider {
     width: 100%;
+    min-height: 300px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
