--- a/src/components/ProjectItem/ProjectItem.module.scss
+++ b/src/components/ProjectItem/ProjectItem.module.scss
@@ -2,6 +2,7 @@
   display: none;
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 16px;
+  width: 88%;
 
   &.active {
     display: flex;
@@ -22,6 +23,7 @@
     h3 {
       margin: 10px;
     }
+
     p {
       padding: 10px;
     }
